collapse correction scss

--- a/src/components/Fichelogement.scss
+++ b/src/components/Fichelogement.scss
@@ -89,8 +89,6 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  padding-left: 20px;
-  padding-right: 30px;
 }
 .equipment-list {
   display: flex;
